--- a/demo.css
+++ b/demo.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'IcoMoon-Free';
-    src: url('https://github.com/UlyanaBogdan/fontsdemo/raw/main/IcoMoon-Free.ttf') format('truetype');
+    src: url('https://api.allorigins.win/raw?url=https://github.com/UlyanaBogdan/fontsdemo/raw/main/IcoMoon-Free.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
